# backend/src/main/java/vn/coopfood/kph/lifecycle/LifecycleTargetType.java
@@ -1,0 +1,6 @@
+package vn.coopfood.kph.lifecycle;
+
+public enum LifecycleTargetType {
+    REGION,
+    STORE
+}
